flowbite script add

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,12 @@
       content="ADN DigiNet Limited"
     />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css" rel="stylesheet" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>ADN DigiNet Limited</title>
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
     <noscript>ADN DigiNet Limited</noscript>
     <div id="root"></div>
   </body>
